# ssh-mcp

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  IFLOW.md  LICENSE  README.md  README_CN.md  SFTP_IMPLEMENTATION_SUMMARY.md  build.py  claude_desktop_config_examples.json  comprehensive_test.py  config_loader.py  debug_config.py  direct_test.py  docker-compose.yml  example_usage.py  install.py  main.py  mcp_server.py  mcp_test_client.py  package.json  pyproject.toml  setup.py  setup_wizard.py  sftp_demo.py  simple_async_test.py  simple_test.py  ssh_config.example.json  ssh_manager.py  test_all_files.py  test_async_commands.py  test_final_integration.py  test_individual.py  test_interactive.py  test_mcp.py  test_mcp_interactive.py  test_mcp_tools_async_commands.py  test_mcp_tools_basic_connections.py  test_mcp_tools_command_execution.py  test_mcp_tools_config_management.py  (+9 more)
.github/workflows/: release.yml
