[project]
name = "ssh_agent_mcp"
version = "0.1.3"
description = "SSH Agent MCP服务 - 通过命令行参数或JSON配置文件管理SSH连接的MCP服务器"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "ssh", "remote", "automation", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0"
]

[project.scripts]
ssh-agent-mcp = "main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/sshagent"
Repository = "https://github.com/yourusername/sshagent"
Documentation = "https://github.com/yourusername/sshagent#readme"
"Bug Tracker" = "https://github.com/yourusername/sshagent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
py-modules = ["main", "mcp_server", "ssh_manager", "config_loader"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']